# python-project-52

./: .gitignore  Makefile  README.md  build.sh  manage.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonar.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_options_alter_label_created_at_and_more.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_created_at_and_more.py
task_manager/: apps.py  asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_options_task_labels.py  0003_alter_task_options_alter_task_author_and_more.py
templates/: base.html  index.html
templates/labels/: create.html  delete.html  index.html  update.html
templates/statuses/: create.html  delete.html  index.html  update.html
templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
templates/users/: create.html  delete.html  index.html  login.html  update.html
users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: __init__.py
